# coins-parser

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/coins_parser/: __init__.py  main.py
tests/: utils.py
tests/html/: test_html.py
tests/html/multiple_coin_objects/: expected.html  input.json
tests/html/single_coin_object/: expected.html  input.json
tests/parse/: test_parse.py
tests/parse/multiple_empty_coins_spans/: expected.json  input.html
tests/parse/single_empty_coins_span/: input.html
tests/parse/single_non_coins_span/: input.html
tests/parse/single_non_empty_coins_span/: expected.json  input.html
