[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coins-parser"
version = "1.1.1"
description = "Parses and creates COinS metadata tags. Can be used with Zotero."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["COinS", "Zotero", "parser", "citation", "metadata"]
authors = [
  { name = "Will Riley", email = "wanderingwill@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
dependencies = ["beautifulsoup4>=4.13.4"]

[project.urls]
Homepage = "https://github.com/willynilly/coins-parser"
Documentation = "https://github.com/willynilly/coins-parser#readme"
Issues = "https://github.com/willynilly/coins-parser/issues"
Source = "https://github.com/willynilly/coins-parser"

[project.optional-dependencies]
testing = [
    "pytest>=8.1.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.hatch.build.targets.sdist.force-include]
"CITATION.cff" = "src/coins_parser/CITATION.cff"
